<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>motor_hw</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="aozhou@todo.todo">aozhou</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>serial</depend>
  <depend>std_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>robot_state_publisher</depend>
  <depend>yaml_cpp_vendor</depend>  <!-- 添加这一行 -->
  <depend>xacro</depend>  <!-- 添加xacro依赖 -->
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <hardware_interface plugin="${prefix}/motor_hw.xml"/>
  </export>
</package>